--- a/django Add or change a related_name argument to the definition.ipynb
+++ b/django Add or change a related_name argument to the definition.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 在django 中继承abstractUser 出现错误，HINT: Add or change a related_name argument to the definition for 'mhUser.user_permissions' or 'User.user_permissions'.\n",
+    "解决方法：\n",
+    "将setting中的AUTH_USER_MODEL设为 'myhealth.mhUser'\n"
+   ]
   }
  ],
  "metadata": {
