增加mysql无法连接解决方案

--- a/django/database表结构.ipynb
+++ b/django/database表结构.ipynb
@@ -37,15 +37,15 @@
     "* password（密文密码）\n",
     "* last_login\n",
     "* is_superuser\n",
-    "*  username\n",
+    "* username\n",
     "* first_name\n",
     "* last_name\n",
     "* email\n",
     "* is_staff\n",
-    "*  is_active\n",
+    "* is_active\n",
     "* date_joined\n",
-    "*  usertype(normal, doctor)\n",
-    "* deviceid\n",
+    "* usertype(normal, doctor)\n",
+    "* deviceid （设备id）\n",
     "* mypassword(明文密码)"
    ]
   },
@@ -85,11 +85,7 @@
     "### 1.4 mhuser_match表\n",
     "* **normaluser** *[foreign key, mhusr_normaluser.user]*\n",
     "* **doctor** *[foreign key, mhuser_doctoruser.user]*\n",
-    "* **charged** *[CharField, choice=(\n",
-    "        ('pressure', '血压数据'),\n",
-    "        ('oxygen', '血氧数据'),\n",
-    "        ('heartbeat', '心跳数据'),\n",
-    "        ('tem', '体温数据')] (负责的部分)*"
+    "* **charged** *[CharField, choice=(('pressure', '血压数据'),('oxygen','血氧数据'),('heartbeat', '心跳数据'),('tem', '体温数据')] (负责的部分)*"
    ]
   },
   {
@@ -98,8 +94,9 @@
    "source": [
     "### 1.5 mhuser_temdata表\n",
     "* **own** *[foreign key, mhuser_normaluser.user]*\n",
+    "* **deviceid** *[CharField, default='', max_length=50]*\n",
     "* **time** *[DateTimeField]*\n",
-    "* **tem_value** *[IntegerField]*"
+    "* **tem_value** *[IntegerField] ××.×× 整数两位，小数两位*"
    ]
   },
   {
@@ -109,9 +106,10 @@
     "### 1.6 mhuser_heartdata表\n",
     "* **own** *[foreign key, mhuser_normaluser.user]*\n",
     "* **time** *[DateTimeField]*\n",
-    "* **b_value** *[IntegerField]*\n",
-    "* **q_value** *[IntegerField]*\n",
-    "* **s_value** *[IntegerField]*"
+    "* **deviceid** *[CharField, default='', max_length=50]*\n",
+    "* **b_value** *[IntegerField] 心率 3位整数*\n",
+    "* **q_value** *[IntegerField] 心率间隔 3位整数*\n",
+    "* **s_value** *[IntegerField] 信号强度 3位整数*"
    ]
   },
   {
@@ -121,8 +119,9 @@
     "### 1.7 mhuser_oxygendata表\n",
     "* **own** *[foreign key, mhuser_normaluser.user]*\n",
     "* **time** *[DateTimeField]*\n",
-    "* **hr_value** *[IntegerField]*\n",
-    "* **spo2_value** *[IntegerField]*"
+    "* **deviceid** *[CharField, default='', max_length=50]*\n",
+    "* **hr_value** *[IntegerField] 心率 3位整数*\n",
+    "* **spo2_value** *[IntegerField] 血氧 3位整数*"
    ]
   },
   {
@@ -132,9 +131,9 @@
     "### 1.8 mhuser_pressuredata表\n",
     "* **own** *[foreign key, mhuser_normaluser.user]*\n",
     "* **time** *[DateTimeField]*\n",
-    "* **s_value** *[IntegerField]*\n",
-    "* **bpss_value** *[IntegerField]*\n",
-    "* **bpsz_value** *[IntegerField]*"
+    "* **deviceid** *[CharField, default='', max_length=50]*\n",
+    "* **bpss_value** *[IntegerField] 舒张压  3位整数* \n",
+    "* **bpsz_value** *[IntegerField] 收缩压 3位整数*"
    ]
   },
   {
@@ -151,8 +150,11 @@
     "### 2.1  explain_explain表\n",
     "* **match** *[foreign key, mhuser_match]*\n",
     "* **author** *[foreign key, mhuser_mhuser]*\n",
+    "* **touserid** *[foreign key, mhuser_normaluser]* \n",
     "* **time** *[DateTimeField]*\n",
-    "* **context** *[RichTextField, max_length=10000]"
+    "* **context** *[RichTextField, max_length=10000]*\n",
+    "* **read** *[CharField]*\n",
+    "> author对应fromuserid, touserid为接受意见的用户，是普通用户。"
    ]
   },
   {
@@ -187,7 +189,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. 评论"
+    "## 4. 评论\n",
+    "> 对博客的评论系统"
    ]
   },
   {
