--- a/Linux/Ubuntu创建用户.ipynb
+++ b/Linux/Ubuntu创建用户.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +37,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "jjakfjklja"
+   ]
   }
  ],
  "metadata": {
@@ -58,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
