--- a/GoLang/值类型与引用类型.ipynb
+++ b/GoLang/值类型与引用类型.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,13 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "map[one:1]\n",
       "map[one:1 two:2]\n",
       "map[one:1 two:2]\n"
      ]
@@ -123,7 +124,7 @@
        "17 <nil>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,6 +133,7 @@
     "// 定义一个map\n",
     "var dit = make(map[string]int)\n",
     "dit[\"one\"] = 1\n",
+    "fmt.Println(dit)\n",
     "// 传参并做改变\n",
     "func change(dit map[string]int){\n",
     "    dit[\"two\"] = 2\n",
@@ -163,7 +165,7 @@
    "name": "go",
    "nbconvert_exporter": "",
    "pygments_lexer": "",
-   "version": "go1.13.1"
+   "version": "go1.13.6"
   }
  },
  "nbformat": 4,
