--- a/GoLang/go get 没反应.ipynb
+++ b/GoLang/go get 没反应.ipynb
@@ -20,6 +20,31 @@
     "到```/etc/hosts```\n",
     "然后reboot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## go get golang.org"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在使用```go get golang.org/...```时，总是```time out```（就算fp也一样，fp之后可以访问```golang.org```），不知道为啥。\n",
+    "\n",
+    "幸好github上存在golang.org的镜像  \n",
+    "例如\n",
+    "```bash\n",
+    "go get -u golang.org/x/net\n",
+    "```\n",
+    "那么这个包的位置在github上就是```github.com/golang/net```, 所以，我们可以手动建立```golang.org/x/```目录，并切换到该目录下，然后使用\n",
+    "```bash\n",
+    "git clone https://github.com/golang/net.git\n",
+    "```\n",
+    "**注意：**要使用```git clone```命令，直接下载下来复制到目录下会提示找不到版本号。"
+   ]
   }
  ],
  "metadata": {
