--- a/GoLang/go中的类型断言-unc.ipynb
+++ b/GoLang/go中的类型断言-unc.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "类型断言是一个使用在接口上的操作，语法上看起来像是x.(T)，因此被称为断言类型，这里x是接口，T是类型。一个类型断言检查它操作对象的动态类型是否和断言的类型匹配。"
+    "类型断言是一个**使用在接口上的操作**，语法上看起来像是x.(T)，因此被称为断言类型，这里x是接口，T是类型。一个类型断言检查它操作对象的动态类型是否和断言的类型匹配。"
    ]
   },
   {
@@ -19,7 +19,8 @@
    "metadata": {},
    "source": [
     "这里有两种可能：\n",
-    "1. 如果断言的类型T是一个具体类型，然后类型断言检查x的动态类型是否和T相同。如果检查成功了，类型断言的结果是x的动态值，即T。换句话说，**具体类型的类型断言从它的操作对象中获得具体的值**。如果检查失败，接下来这个操作会panic。"
+    "1. 如果断言的类型T是一个具体类型  \n",
+    "类型断言检查x的动态类型是否和T相同。如果检查成功了，类型断言的结果是x的动态值，即T。换句话说，**具体类型的类型断言从它的操作对象中获得具体的值**。如果检查失败，接下来这个操作会panic。"
    ]
   },
   {
@@ -89,12 +90,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. 如果相反断言的类型T是一个接口类型，然后类型断言检查是否x的动态类型满足T。如果这个检查成功了，动态值没有获取到，这个结果仍然是一个有相同类型和值部分的接口值，但是结果有类型T。换句话说，**对一个接口类型的类型断言改变了类型的表述方式，改变了可以获取的方法集合（通常更大）， 但是它保护了接口值内部的动态类型和值的部分。**"
+    "2. 断言的类型T是一个接口类型  \n",
+    "```go\n",
+    "t, ok := i.(T)\n",
+    "```\n",
+    "如果i是类型T（实现了T接口），即检查成功了，那么t将是i的原值，ok为true；如果检查失败了，t将为T类型的零值，ok为false，并且不引发panic。   \n",
+    "**对一个接口类型的类型断言改变了类型的表述方式，改变了可以获取的方法集合（通常更大）， 但是它保护了接口值内部的动态类型和值的部分。**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -140,5 +146,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
