--- a/GoLang/值类型与引用类型.ipynb
+++ b/GoLang/值类型与引用类型.ipynb
@@ -150,6 +150,14 @@
    "source": [
     "将map作为参数传入函数，当在函数内部对参数进行修改时，原数据也随之变化。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "引用类型包括slice,map,channel.   \n",
+    "内置函数new计算类型大小,为其分配零值内存,返回指针.而make会被编译器翻译成具体的创建函数,由其分配内存和初始化成员结构,返回对象而非指针."
+   ]
   }
  ],
  "metadata": {
@@ -165,9 +173,9 @@
    "name": "go",
    "nbconvert_exporter": "",
    "pygments_lexer": "",
-   "version": "go1.13.6"
+   "version": "go1.14.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
