--- a/GoLang/GO MOD-unc.ipynb
+++ b/GoLang/GO MOD-unc.ipynb
@@ -5,7 +5,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import \"fmt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fmt.Println(\"hello\")"
+   ]
   }
  ],
  "metadata": {
@@ -25,5 +36,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
